# cargo-msrv

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  404.html  CHANGELOG.md  CONTRIBUTIING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  about.hbs  about.toml  book.toml  bors.toml  build.rs  deny.toml  index.html  print.html  searchindex.js  searchindex.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: book.yml  build-release-binaries.yaml  ci.yml  coverage.yml  docker.yml  fmt.yml  licenses_and_advisories.yml  linter.yml  msrv.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  index.md
book/src/ci/: gitlab.md  index.md
book/src/commands/: find.md  help.md  index.md  list.md  run.md  set.md  show.md  verify.md
book/src/concepts/: index.md
book/src/getting-started/: cargo-workspace.md  index.md  installation.md  quick-start.md  rust-releases-proxy.md
book/src/migration-guide/: index.md  v0.15_v0.16_json.md
book/src/output-formats/: human.md  index.md  json.md  minimal.md  no-user-output.md
book/src/releases/: index.md  v0.15_v0.16_highlights.md  v0.15_v0.16_json.md
ci/: gitlab.html  index.html
commands/: find.html  help.html  index.html  list.html  run.html  set.html  show.html  verify.html
concepts/: index.html
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  opts.rs
crates/events/: Cargo.toml
crates/events/src/: event.rs  lib.rs
crates/events/src/event/: action.rs  auxiliary_output.rs  compatibility.rs  compatibility_check_method.rs  fetch_index.rs  list_dep.rs  meta.rs  msrv_result.rs  new_compatibility_check.rs  progress.rs  search_method.rs  set_output.rs  setup_toolchain.rs  show_output.rs  termination.rs
crates/events/src/event/list_dep/: direct_deps.rs  metadata.rs
crates/msrv/: Cargo.toml
crates/msrv/src/: lib.rs  msrv.rs
crates/package-selection/: Cargo.toml  README.md
crates/package-selection/src/: lib.rs
crates/reporter-human/: Cargo.toml
crates/reporter-json/: Cargo.toml
crates/reporter-minimal/: Cargo.toml
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs  log_level.rs
crates/types/: Cargo.toml
crates/types/src/: bare_version.rs  lib.rs  release_source.rs  types.rs
crates/types/src/types/: action.rs  release_source.rs  toolchain.rs
design/: 20230519_visualizer_ui.excalidraw
features/1.29.2/: Cargo.toml
features/1.30.0/src/: main.rs
features/1.35.0/: Cargo.toml
features/1.35.0/src/: main.rs
features/1.36.0/: Cargo.toml
features/1.36.0/src/: main.rs
features/1.37.0/: Cargo.toml
features/1.38.0/: Cargo.toml
features/1.56.0-edition-2018/src/: main.rs
features/1.56.0-edition-2021/src/: main.rs
features/unbuildable-with-msrv/: Cargo.toml
getting-started/: cargo-workspace.html  index.html  installation.html  quick-start.html  rust-releases-proxy.html
migration-guide/: index.html  v0.15_v0.16_json.html
output-formats/: human.html  index.html  json.html  minimal.html  no-user-output.html
releases/: index.html  v0.15_v0.16_highlights.html  v0.15_v0.16_json.html
src/: SUMMARY.md  actions.rs  check.rs  check_cmd.rs  cli.rs  cli_new.rs  combinators.rs  command.rs  config.rs  context.rs  ctx.rs  default_target.rs  dependency_graph.rs  download.rs  error.rs  errors.rs  exit_code.rs  fetch.rs  filter_releases.rs  formatter.rs  formatting.rs  index.md  io.rs  json.rs  lib.rs  lockfile.rs  log_level.rs  manifest.rs  msrv.rs  outcome.rs  paths.rs  release_index.rs  releases.rs  releases_filter.rs  reporter.rs  reporter_new.rs  result.rs  rust_release.rs  search_method.rs  search_methods.rs  (+9 more)
src/actions/: is_cargo_project.rs
src/cargo_msrv/: cli.rs  mod.rs
src/cargo_msrv/core/: mod.rs
src/cargo_msrv/find/: mod.rs
src/cargo_msrv/verify/: mod.rs
src/check/: mod.rs  rustup_toolchain_check.rs  testing.rs
src/cli/: configurators.rs  custom_check_opts.rs  find_opts.rs  mod.rs  rust_releases_opts.rs  shared_opts.rs  toolchain_opts.rs
src/cli/configurators/: check_feedback.rs  crate_path.rs  custom_check.rs  ignore_lockfile.rs  manifest_path.rs  max_version.rs  min_version.rs  output_toolchain_file.rs  path.rs  release_source.rs  search_method.rs  search_space.rs  sub_command_configurator.rs  target.rs  tracing_configurator.rs  user_output.rs  write_msrv.rs
src/cli_new/: configurators.rs  custom_check_opts.rs  find_opts.rs  rust_releases_opts.rs  toolchain_opts.rs
src/cli_new/configurators/: check_feedback.rs  custom_check.rs  ignore_lockfile.rs  max_version.rs  min_version.rs  output_toolchain_file.rs  path.rs  release_source.rs  search_method.rs  search_space.rs  sub_command_configurator.rs  target.rs  user_output.rs  (+1 more)
src/command/: cargo_command.rs
src/compatibility/: mod.rs  rustup_toolchain_check.rs  testing.rs
src/config/: list.rs  mod.rs  set.rs  verify.rs
src/context/: doctor.rs  find.rs  list.rs  mod.rs  set.rs  show.rs  verify.rs
src/dependencies/: formatter.rs  mod.rs  resolver.rs
src/dependency_graph/: resolver.rs
src/external_command/: cargo_command.rs  rustup_command.rs
src/getting-started/: quick-start.md
src/manifest/: bare_version.rs  mod.rs  reader.rs
src/reporter/: event.rs  formatting.rs  handler.rs  json.rs  mod.rs  no_output.rs  testing.rs  ui.rs
src/rust/: mod.rs  release.rs  release_index.rs  releases_filter.rs  setup_toolchain.rs  toolchain.rs
src/search_method/: bisect.rs  linear.rs  mod.rs
src/search_methods/: bisect.rs  linear.rs
src/storyteller/: event.rs  handler.rs  progress.rs
src/sub_command/: doctor.rs  find.rs  list.rs  mod.rs  set.rs  show.rs  verify.rs
src/subcommands/: determine_msrv.rs  doctor.rs  find.rs  list.rs  mod.rs  set.rs  show.rs  verify.rs  verify_msrv.rs
src/writer/: toolchain_file.rs  write_msrv.rs
src/writers/: toolchain_file.rs  write_msrv.rs
tests/: find_msrv.rs  find_msrv_top_level.rs  user_output.rs  verify_exit_code.rs  verify_msrv.rs  with_versions.rs
tests/common/: fixture.rs  mod.rs  reporter.rs  runner.rs  sub_cmd_find.rs  sub_cmd_verify.rs
tests/fixtures/1.30.0/: Cargo.toml
tests/fixtures/workspace-inheritance/c/: Cargo.toml
(+121 files in other folders)
