[package]
name = "cargo-msrv"
version = "0.16.3"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Find your minimum supported Rust version (MSRV)!"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/foresterre/cargo-msrv"

keywords = ["msrv", "rust-version", "toolchain", "find", "minimum"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]

build = "build.rs"

exclude = ["/design"]
rust-version = "1.78"

[package.metadata.release]
tag-name = "v{{version}}"

[dependencies]
bisector = "0.4.0" # bisection with a custom comparator
camino = "1.1" # utf-8 paths
cargo_metadata = "0.18.1" # resolving Cargo manifest metadata (consider `guppy`!)
clap = { version = "4.5.21", features = ["derive"] } # parse CLI arguments
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
dirs = "5.0.1" # common directories
indicatif = "0.17.8" # UI
once_cell = "1.20.2" # lazy data structures and thunking
owo-colors = "4.1.0" # color support for the terminal
petgraph = "0.6.5" # graph data structures
rust-releases = { version = "0.28.0", default-features = false, features = ["rust-changelog"] } # get the available rust versions
serde = { version = "1.0", features = ["derive"] } # serialization and deserialization
serde_json = "1.0.133"  # JSON serialization and deserialization
storyteller = "1.0.0" # minimal multi user output architecture
tabled = { version = "~0.16.0", features = ["ansi"] } # pretty print tables
terminal_size = "0.4.0" # determine the terminal size
thiserror = "2.0.3" # error handling
toml_edit = "0.22.22" # read and write the Cargo.toml
tracing = "0.1" # tracing
tracing-appender = "0.2" # tracing
tracing-subscriber = { version = "0.3", features = ["json"] }

[features]
default = ["rust-releases-dist-source"]
rust-releases-dist-source = ["rust-releases/rust-dist"]

[dev-dependencies]
parameterized = "2.0.0"
yare = "3.0.0"
phenomenon = "~1.0.0"
assert_fs = "1.1.2"

[build-dependencies]
vergen = { version = "8.3.2", default-features = false, features = ["build", "cargo", "git", "gitcl", "rustc"] }

[profile.release]
lto = true
codegen-units = 1
