[package]
name = "cargo-msrv"
version = "0.18.4"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Find your minimum supported Rust version (MSRV)!"
license = "Apache-2.0 OR MIT"
edition = "2021"
repository = "https://github.com/foresterre/cargo-msrv"

keywords = ["msrv", "rust-version", "toolchain", "find", "minimum"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]

build = "build.rs"
exclude = ["/design"]
rust-version = "1.85"

[package.metadata.release]
tag-name = "v{{version}}"

[dependencies]
# workspace
msrv = { path = "crates/msrv", version = "0.0.2" }

# external
bisector = "0.4.0" # bisection with a custom comparator
camino = "1.1" # utf-8 paths
cargo_metadata = "0.19.2" # resolving Cargo manifest metadata (consider `guppy`!)
clap = { version = "4.5.39", features = ["derive"] } # parse CLI arguments
clap-cargo = { version = "0.15.2", features = ["cargo_metadata"] }
dirs = "6.0.0" # common directories
dunce = "1.0.5" # better canonicalize for Windows
indicatif = "0.17.11" # UI
indoc = "2.0.6"
owo-colors = "4.2.1" # color support for the terminal
petgraph = "0.8.1" # graph data structures
rust-releases = { version = "0.30.0", default-features = false, features = ["rust-changelog"] } # get the available rust versions
serde = { version = "1.0", features = ["derive"] } # serialization and deserialization
serde_json = "1.0.140"  # JSON serialization and deserialization
storyteller = "1.0.0" # minimal multi user output architecture
tabled = { version = "~0.16.0", features = ["ansi"] } # pretty print tables
terminal_size = "0.4.2" # determine the terminal size
thiserror = "2.0.11" # error handling
toml_edit = "0.22.26" # read and write the Cargo.toml
tracing = "0.1" # tracing
tracing-appender = "0.2" # tracing
tracing-subscriber = { version = "0.3", features = ["json"] }

[features]
default = ["rust-releases-dist-source"]
rust-releases-dist-source = ["rust-releases/rust-dist"]

[dev-dependencies]
parameterized = "2.0.0"
yare = "3.0.0"
phenomenon = "~1.0.0"
assert_fs = "1.1.3"

[build-dependencies]
vergen = { version = "8.3.2", default-features = false, features = ["build", "cargo", "git", "gitcl", "rustc"] }

[workspace]
members = ["crates/msrv"]

[profile.release]
lto = true
codegen-units = 1
