[package]
name = "cargo-msrv-events"
description = "Types for events reported by Cargo MSRV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-msrv-types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }