[package]
name = "cargo-msrv-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"

# dependency types
semver = "1"
version-number = "0.2.2"

[features]
rust-releases-dist-source = [] # TODO: keep?